# gramwork

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: minimal.py  multi_plugin.py  with_llm.py
plugins/gramwork-autoreply/: pyproject.toml
plugins/gramwork-autoreply/src/gramwork_autoreply/: __init__.py
plugins/gramwork-moderation/: pyproject.toml
plugins/gramwork-moderation/src/gramwork_moderation/: __init__.py
plugins/gramwork-summarizer/: pyproject.toml
plugins/gramwork-summarizer/src/gramwork_summarizer/: __init__.py
src/gramwork/: __init__.py  __main__.py  agent.py  app.py  autonomous.py  config.py  context.py  exceptions.py  logging.py  middleware.py  routing.py  types.py
src/gramwork/cli/: main.py  scaffold.py
src/gramwork/cli/templates/project/: agent.py.j2  config.toml.j2  pyproject.toml.j2
src/gramwork/llm/: __init__.py  base.py  errors.py  message.py  ollama.py  openai_compat.py
src/gramwork/plugins/: __init__.py  base.py  loader.py
src/gramwork/safety/: __init__.py  filters.py  rate_limit.py
src/gramwork/security/: __init__.py  session.py  vault.py
src/gramwork/state/: __init__.py  base.py  memory.py  models.py  sqlite.py
src/gramwork/tools/: __init__.py  base.py  telegram.py
tests/: test_app.py  test_config.py  test_context.py  test_filters.py  test_llm.py  test_middleware.py  test_rate_limit.py  test_routing.py  test_scaffold.py  test_state.py
