[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gramwork"
version = "0.1.0"
description = "Telegram user-agent framework for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "poptye", email = "poptye@proton.me" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "telethon>=1.34",
    "click>=8.1",
    "aiohttp>=3.9",
    "cryptography>=41",
]

[project.optional-dependencies]
sqlite = ["aiosqlite>=0.19"]
dev = [
    "pytest>=7",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
    "coverage>=7",
]

[project.scripts]
gramwork = "gramwork.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
