[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gramwork-autoreply"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["gramwork"]

[project.entry-points."gramwork.plugins"]
autoreply = "gramwork_autoreply:AutoReplyPlugin"
